# one-shots

./: .gitignore
LearnWebGPU/: CMakeLists.txt  application.cpp  application.h  main.cpp  webgpu-utils.cpp
